# lgg

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  tips_and_tricks.md
.github/: FUNDING.yml
clis/: Cargo.toml
clis/src/: lib.rs
clis/src/cli_modes/: lgg_cli.rs  mod.rs  todo_cli.rs
clis/src/common/: base_cli.rs  editor_utils.rs  mod.rs
clis/src/render/: renderer.rs
lgg/: Cargo.toml
lgg-cli/: Cargo.toml
lgg-cli/src/: main.rs
lgg-cli/src/cli/: cli.rs  style.rs
lgg-cli/src/cli_modes/: cli_mode.rs  edit_mode.rs  editor_utils.rs  mod.rs  read_mode.rs  write_mode.rs
lgg-cli/src/render/: theme.rs
lgg-core/: Cargo.toml
lgg-core/src/: config.rs  dates.rs  entries.rs  entry.rs  journal.rs  keywords.rs  lgg.rs  lib.rs  parse_entries.rs  parse_input.rs  render.rs
lgg-core/src/config/: config.rs  mod.rs
lgg-core/src/journal/: date_utils.rs  format_utils.rs  journal.rs  journal_entry.rs  journal_paths.rs  mod.rs  parse_entries.rs  parse_input.rs  parsed_entry.rs  path_utils.rs
lgg-core/src/keywords/: keywords.rs  mod.rs
lgg-core/src/tests/: common.rs  mod.rs
lgg-core/src/todo_list/: mod.rs  parse_todos.rs  todo_entry.rs  todo_list.rs
lgg-core/src/todos/: format_utils.rs  mod.rs  parse_todos.rs  todo_entry.rs  todos.rs  todos_paths.rs
lgg-core/src/utils/: date_utils.rs  format_utils.rs  mod.rs  parse_entries.rs  parse_input.rs  parsed_entry.rs  parsed_input.rs  path_utils.rs
lgg/src/: main.rs  renderer.rs
lgg/src/cli/: cli.rs  mod.rs
lgg/src/cli_modes/: edit_mode.rs  mod.rs  read_mode.rs  use_color.rs  write_mode.rs
(+3 files in other folders)
