[package]
name = "lgg-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "6.0.0"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
toml = "0.9.5"

[dev-dependencies]
tempfile = "3"
